--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -57,49 +57,73 @@
   <div class="about-section">
     <h2>2. Allgemeines</h2>
     <p>
-      Diese Website verarbeitet personenbezogene Daten nur im technisch notwendigen Umfang. 
-      Es werden keine Tracking-Tools, Cookies oder Analysedienste eingesetzt.
+      Diese Website ist eine rein statische Website und speichert <strong>keine personenbezogenen Daten der Besucher</strong>. 
+      Es werden keine Cookies gesetzt, keine Tracking-Tools verwendet und keine Analysedienste eingesetzt.
     </p>
   </div>
 
   <div class="about-section">
-    <h2>3. Server-Log-Dateien</h2>
+    <h2>3. Hosting über GitHub Pages</h2>
     <p>
-      Beim Aufruf dieser Website werden automatisch Informationen in Server-Log-Dateien gespeichert:
+      Diese Website wird über GitHub Pages gehostet. Beim Aufruf der Website werden technische Informationen 
+      wie IP-Adresse, Browsertyp und Zugriffszeit automatisch in Server-Log-Dateien von GitHub gespeichert. 
+      Diese Daten werden ausschließlich von GitHub zur Sicherstellung des technischen Betriebs verarbeitet.
     </p>
-    <ul>
-      <li>IP-Adresse</li>
-      <li>Datum und Uhrzeit der Anfrage</li>
-      <li>Browsertyp und -version</li>
-      <li>Betriebssystem</li>
-    </ul>
     <p>
-      Diese Daten werden ausschließlich zur Sicherstellung des technischen Betriebs und zur 
-      Fehleranalyse verwendet. Eine Zusammenführung mit anderen Datenquellen erfolgt nicht.
+      <strong>Wichtig:</strong> Ich habe keinen Zugriff auf diese Server-Logs und speichere selbst keine Besucherdaten.
+    </p>
+    <p>
+      Weitere Informationen zum Datenschutz bei GitHub Pages:<br>
+      <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank" rel="noopener">
+        GitHub Privacy Statement
+      </a>
     </p>
   </div>
 
   <div class="about-section">
-    <h2>4. Kontaktaufnahme</h2>
+    <h2>4. Kontaktaufnahme per E-Mail</h2>
     <p>
-      Bei Kontaktaufnahme per E-Mail werden die übermittelten Daten ausschließlich zur Bearbeitung 
-      der Anfrage verwendet und nicht an Dritte weitergegeben.
+      Bei Kontaktaufnahme per E-Mail (c@weier.digital) werden Ihre Daten nur zur Bearbeitung 
+      Ihrer Anfrage verwendet. Die E-Mail-Kommunikation erfolgt unverschlüsselt über das Internet.
+    </p>
+    <p>
+      <strong>Speicherung:</strong> Ihre E-Mail wird in meinem E-Mail-Postfach gespeichert und 
+      nach Abschluss der Korrespondenz bzw. nach Wegfall des Zwecks gelöscht, sofern keine 
+      rechtlichen Aufbewahrungspflichten bestehen.
+    </p>
+    <p>
+      <strong>Löschung:</strong> Sie können jederzeit die Löschung Ihrer E-Mail-Korrespondenz verlangen. 
+      Senden Sie dazu einfach eine E-Mail an c@weier.digital mit dem Betreff "Datenlöschung".
     </p>
   </div>
 
   <div class="about-section">
     <h2>5. Ihre Rechte</h2>
-    <p>Sie haben jederzeit das Recht auf:</p>
+    <p>
+      Da diese Website selbst keine personenbezogenen Daten der Besucher speichert, gibt es auch keine Daten, 
+      die ich löschen, berichtigen oder übertragen könnte.
+    </p>
+    <p>
+      <strong>Ausnahme E-Mail-Kontakt:</strong> Bei E-Mail-Korrespondenz mit mir haben Sie das Recht auf:
+    </p>
     <ul>
-      <li>Auskunft über gespeicherte Daten</li>
-      <li>Berichtigung unrichtiger Daten</li>
-      <li>Löschung Ihrer Daten</li>
-      <li>Einschränkung der Verarbeitung</li>
-      <li>Widerspruch gegen die Verarbeitung</li>
-      <li>Datenübertragbarkeit</li>
+      <li>Auskunft über gespeicherte E-Mails und deren Inhalt</li>
+      <li>Löschung der E-Mail-Korrespondenz</li>
+      <li>Widerspruch gegen die weitere Verarbeitung</li>
     </ul>
     <p>
-      Wenden Sie sich dazu bitte an: c@weier.digital
+      Wenden Sie sich dazu an: c@weier.digital
+    </p>
+  </div>
+
+  <div class="about-section">
+    <h2>6. Theme-Einstellung (Local Storage)</h2>
+    <p>
+      Diese Website speichert Ihre Theme-Präferenz (Hell/Dunkel-Modus) lokal in Ihrem Browser 
+      (Local Storage). Diese Information verlässt niemals Ihren Browser und wird nicht an mich übertragen.
+    </p>
+    <p>
+      Sie können diese Daten jederzeit in Ihren Browser-Einstellungen löschen.
     </p>
   </div>
 </section>
