--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Über – weier.digital</title>
+  <title data-de="Über – weier.digital" data-en="About – weier.digital">Über – weier.digital</title>
   <meta name="description" content="Über Carsten Weier" />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
@@ -17,46 +17,58 @@
     </a>
 
     <nav class="menu" aria-label="Navigation">
-      <a href="/">Start</a>
-      <a class="active" href="/about/">Über</a>
+      <a href="/">
+        <span data-de="Start" data-en="Home">Start</span>
+      </a>
+      <a class="active" href="/about/">
+        <span data-de="Über" data-en="About">Über</span>
+      </a>
       <a href="/blog/">Blog</a>
-      <a href="/kontakt/">Kontakt</a>
+      <a href="/kontakt/">
+        <span data-de="Kontakt" data-en="Contact">Kontakt</span>
+      </a>
     </nav>
 
-    <button class="btn iconbtn" id="themeToggle" type="button" aria-label="Theme wechseln">
-      <svg class="icon" data-ic="moon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-        <path d="M21 13.3A8.3 8.3 0 0 1 10.7 3a7.5 7.5 0 1 0 10.3 10.3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-      <svg class="icon" data-ic="sun" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:none">
-        <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="2"/>
-        <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-      </svg>
-    </button>
+    <div class="actions">
+      <button class="btn iconbtn" id="langToggle" type="button" aria-label="Language">
+        <span class="lang-label">DE</span>
+      </button>
+      <button class="btn iconbtn" id="themeToggle" type="button" aria-label="Theme">
+        <svg class="icon" data-ic="moon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <path d="M21 13.3A8.3 8.3 0 0 1 10.7 3a7.5 7.5 0 1 0 10.3 10.3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <svg class="icon" data-ic="sun" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:none">
+          <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="2"/>
+          <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+      </button>
+    </div>
   </div>
 </header>
 
 <main class="container">
 
 <section class="page-header">
-  <h1>Über mich</h1>
-  <p class="lead">
+  <h1 data-de="Über mich" data-en="About me">Über mich</h1>
+  <p class="lead" data-de="Ich arbeite im Umfeld von Administration, Daten und Engineering-Prozessen." 
+     data-en="I work in the field of administration, data and engineering processes.">
     Ich arbeite im Umfeld von Administration, Daten und Engineering-Prozessen.
   </p>
 </section>
 
 <section class="about-content">
   <div class="about-section">
-    <h2>Was ich mache</h2>
-    <p>
-      Ich baue kleine, robuste Verbesserungen in bestehenden Systemen – 
-      Automatisierung, Datenpflege und Qualitätschecks im ERP- und Engineering-Umfeld.
+    <h2 data-de="Was ich mache" data-en="What I do">Was ich mache</h2>
+    <p data-de="Ich baue kleine, robuste Verbesserungen in bestehenden Systemen – Automatisierung, Datenpflege und Qualitätschecks im ERP- und Engineering-Umfeld." 
+       data-en="I build small, robust improvements in existing systems – automation, data maintenance and quality checks in ERP and engineering environments.">
+      Ich baue kleine, robuste Verbesserungen in bestehenden Systemen – Automatisierung, Datenpflege und Qualitätschecks im ERP- und Engineering-Umfeld.
     </p>
   </div>
 
   <div class="skills-grid">
     <div class="skill-card">
-      <h3>Technik</h3>
+      <h3 data-de="Technik" data-en="Technology">Technik</h3>
       <div class="tech-tags">
         <span class="tech-tag">Python</span>
         <span class="tech-tag">SQL</span>
@@ -66,23 +78,47 @@
     </div>
 
     <div class="skill-card">
-      <h3>Fokus</h3>
+      <h3>Focus</h3>
       <div class="tech-tags">
-        <span class="tech-tag">Prozesse</span>
-        <span class="tech-tag">Automation</span>
-        <span class="tech-tag">Datenqualität</span>
+        <span class="tech-tag" data-de="Prozesse" data-en="Processes">Prozesse</span>
+        <span class="tech-tag" data-de="Automation" data-en="Automation">Automation</span>
+        <span class="tech-tag" data-de="Datenqualität" data-en="Data Quality">Datenqualität</span>
         <span class="tech-tag">Engineering</span>
       </div>
     </div>
 
     <div class="skill-card">
-      <h3>Ansatz</h3>
+      <h3 data-de="Ansatz" data-en="Approach">Ansatz</h3>
       <div class="tech-tags">
-        <span class="tech-tag">Pragmatisch</span>
-        <span class="tech-tag">Messbar</span>
-        <span class="tech-tag">Wartbar</span>
-        <span class="tech-tag">Dokumentiert</span>
+        <span class="tech-tag" data-de="Pragmatisch" data-en="Pragmatic">Pragmatisch</span>
+        <span class="tech-tag" data-de="Messbar" data-en="Measurable">Messbar</span>
+        <span class="tech-tag" data-de="Wartbar" data-en="Maintainable">Wartbar</span>
+        <span class="tech-tag" data-de="Dokumentiert" data-en="Documented">Dokumentiert</span>
       </div>
+    </div>
+  </div>
+
+  <div class="social-section">
+    <h2 data-de="Verbinden" data-en="Connect">Verbinden</h2>
+    <div class="social-links-large">
+      <a href="https://www.linkedin.com/in/carsten-weier-a241001a2/" target="_blank" rel="noopener" class="social-card">
+        <svg viewBox="0 0 24 24" fill="currentColor" class="social-icon-large">
+          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+        </svg>
+        <div>
+          <h3>LinkedIn</h3>
+          <p>linkedin.com/in/carsten-weier-a241001a2</p>
+        </div>
+      </a>
+      <a href="https://www.xing.com/profile/Carsten_Weier3/" target="_blank" rel="noopener" class="social-card">
+        <svg viewBox="0 0 24 24" fill="currentColor" class="social-icon-large">
+          <path d="M18.188 0c-.517 0-.741.325-.927.66 0 0-7.455 13.224-7.702 13.657.015.024 4.919 9.023 4.919 9.023.17.308.436.66.967.66h3.454c.211 0 .375-.078.463-.22.089-.151.089-.346-.009-.536l-4.879-8.916c-.004-.006-.004-.016 0-.022L22.139.756c.095-.191.097-.387.006-.535C22.056.078 21.894 0 21.686 0h-3.498zM3.648 4.74c-.211 0-.385.074-.473.216-.09.149-.078.339.02.531l2.34 4.05c.004.01.004.016 0 .021L1.86 16.051c-.099.188-.093.381 0 .529.085.142.239.234.45.234h3.461c.518 0 .766-.348.945-.667l3.734-6.609-2.378-4.155c-.172-.315-.434-.659-.962-.659H3.648v.016z"/>
+        </svg>
+        <div>
+          <h3>Xing</h3>
+          <p>xing.com/profile/Carsten_Weier3</p>
+        </div>
+      </a>
     </div>
   </div>
 
@@ -94,8 +130,12 @@
   <div class="container footrow">
     <small>© <span id="y"></span> Carsten Weier</small>
     <small>
-      <a href="/impressum/">Impressum</a> · 
-      <a href="/datenschutz/">Datenschutz</a>
+      <a href="/impressum/">
+        <span data-de="Impressum" data-en="Legal Notice">Impressum</span>
+      </a> · 
+      <a href="/datenschutz/">
+        <span data-de="Datenschutz" data-en="Privacy">Datenschutz</span>
+      </a>
     </small>
   </div>
 </footer>
