--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         </svg>
         <svg class="icon" data-ic="sun" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:none">
           <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="2"/>
-          <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
         </svg>
       </button>
     </div>
@@ -49,37 +48,37 @@
 
 <main class="container">
 
-<section class="hero">
-  <h1>Carsten Weier</h1>
-  <p class="lead" data-de="Prozesse, Automatisierung & Datenqualität im Engineering-Umfeld" 
-     data-en="Process Automation & Data Quality in Engineering Environments">
-    Prozesse, Automatisierung & Datenqualität im Engineering-Umfeld
-  </p>
-</section>
+  <section class="hero">
+    <h1>Carsten Weier</h1>
+    <p class="lead" data-de="Prozesse, Automatisierung & Datenqualität im Engineering-Umfeld" 
+       data-en="Process Automation & Data Quality in Engineering Environments">
+      Prozesse, Automatisierung & Datenqualität im Engineering-Umfeld
+    </p>
+  </section>
 
-<section class="grid">
-  <article class="card">
-    <h3 data-de="Prozess-Automatisierung" data-en="Process Automation">Prozess-Automatisierung</h3>
-    <p data-de="Wiederkehrende Abläufe automatisieren und Reibungspunkte beseitigen" 
-       data-en="Automate recurring workflows and eliminate friction points">
-      Wiederkehrende Abläufe automatisieren und Reibungspunkte beseitigen
-    </p>
-  </article>
-  <article class="card">
-    <h3 data-de="Datenqualität" data-en="Data Quality">Datenqualität</h3>
-    <p data-de="Stammdaten pflegen, Plausibilitäten prüfen und Dubletten vermeiden" 
-       data-en="Maintain master data, check plausibility and avoid duplicates">
-      Stammdaten pflegen, Plausibilitäten prüfen und Dubletten vermeiden
-    </p>
-  </article>
-  <article class="card">
-    <h3 data-de="Engineering-Prozesse" data-en="Engineering Processes">Engineering-Prozesse</h3>
-    <p data-de="Tools und Workflows im ERP- und CAD-Umfeld verbessern" 
-       data-en="Improve tools and workflows in ERP and CAD environments">
-      Tools und Workflows im ERP- und CAD-Umfeld verbessern
-    </p>
-  </article>
-</section>
+  <section class="grid" style="margin-top: 60px;">
+    <article class="card">
+      <h3 data-de="Prozess-Automatisierung" data-en="Process Automation">Prozess-Automatisierung</h3>
+      <p data-de="Wiederkehrende Abläufe automatisieren und Reibungspunkte beseitigen" 
+         data-en="Automate recurring workflows and eliminate friction points">
+        Wiederkehrende Abläufe automatisieren und Reibungspunkte beseitigen
+      </p>
+    </article>
+    <article class="card">
+      <h3 data-de="Datenqualität" data-en="Data Quality">Datenqualität</h3>
+      <p data-de="Stammdaten pflegen, Plausibilitäten prüfen und Dubletten vermeiden" 
+         data-en="Maintain master data, check plausibility and avoid duplicates">
+        Stammdaten pflegen, Plausibilitäten prüfen und Dubletten vermeiden
+      </p>
+    </article>
+    <article class="card">
+      <h3 data-de="Engineering-Prozesse" data-en="Engineering Processes">Engineering-Prozesse</h3>
+      <p data-de="Tools und Workflows im ERP- und CAD-Umfeld verbessern" 
+         data-en="Improve tools and workflows in ERP and CAD environments">
+        Tools und Workflows im ERP- und CAD-Umfeld verbessern
+      </p>
+    </article>
+  </section>
 
 </main>
 
@@ -90,12 +89,12 @@
     <div class="footer-social">
       <a href="https://www.linkedin.com/in/carsten-weier-a241001a2/" target="_blank" rel="noopener" class="footer-social-link" aria-label="LinkedIn">
         <svg viewBox="0 0 24 24" fill="currentColor" class="footer-social-icon">
-          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286z"/>
         </svg>
       </a>
       <a href="https://www.xing.com/profile/Carsten_Weier3/" target="_blank" rel="noopener" class="footer-social-link" aria-label="Xing">
         <svg viewBox="0 0 24 24" fill="currentColor" class="footer-social-icon">
-          <path d="M18.188 0c-.517 0-.741.325-.927.66 0 0-7.455 13.224-7.702 13.657.015.024 4.919 9.023 4.919 9.023.17.308.436.66.967.66h3.454c.211 0 .375-.078.463-.22.089-.151.089-.346-.009-.536l-4.879-8.916c-.004-.006-.004-.016 0-.022L22.139.756c.095-.191.097-.387.006-.535C22.056.078 21.894 0 21.686 0h-3.498zM3.648 4.74c-.211 0-.385.074-.473.216-.09.149-.078.339.02.531l2.34 4.05c.004.01.004.016 0 .021L1.86 16.051c-.099.188-.093.381 0 .529.085.142.239.234.45.234h3.461c.518 0 .766-.348.945-.667l3.734-6.609-2.378-4.155c-.172-.315-.434-.659-.962-.659H3.648v.016z"/>
+          <path d="M18.188 0c-.517 0-.741.325-.927.66 0 0-7.455 13.224-7.702 13.657.015.024 4.919 9.023 4.919 9.023.17.308.436.66.967.66h3.454c.211 0 .375-.078.463-.22.089-.151.089-.346-.009-.536l-4.879-8.916c-.024-.035-.049-.089-.072-.14.023-.051.048-.105.072-.139l7.701-13.661c.098-.188.098-.386-.009-.534-.107-.151-.271-.232-.482-.232h-3.454c-.531 0-.796.36-.967.667l-4.918 9.02.035-.063-4.918-9.02c-.17-.306-.436-.667-.967-.667H0c-.211 0-.375.081-.482.232-.107.148-.107.346.009.534l7.701 13.661c.024.034.048.088.072.139-.023.051-.048.105-.072.14L.494 23.271c-.107.19-.107.385.009.535.108.151.271.232.482.232h3.454c.531 0 .796-.361.967-.668l4.918-9.02-.034.063 4.918 9.02c.171.307.436.668.967.668h3.454c.211 0 .375-.081.482-.232.108-.15.108-.345-.009-.535z"/>
         </svg>
       </a>
     </div>
