--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@
       <button class="btn iconbtn" id="langToggle" type="button" aria-label="Language">
         <span class="lang-label">DE</span>
       </button>
+
       <button class="btn iconbtn" id="themeToggle" type="button" aria-label="Theme">
         <svg class="icon" data-ic="moon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M21 13.3A8.3 8.3 0 0 1 10.7 3a7.5 7.5 0 1 0 10.3 10.3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M21 13.3A8.3 8.3 0 0 1 10.7 3a7.5 7.5 0 1 0 10.3 10.3Z"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
         <svg class="icon" data-ic="sun" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:none">
           <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="2"/>
-          <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
         </svg>
       </button>
     </div>
@@ -50,7 +53,8 @@
 
   <section class="hero">
     <h1>Carsten Weier</h1>
-    <p class="lead" data-de="Prozesse, Automatisierung & Datenqualität im Engineering-Umfeld" 
+    <p class="lead"
+       data-de="Prozesse, Automatisierung & Datenqualität im Engineering-Umfeld"
        data-en="Process Automation & Data Quality in Engineering Environments">
       Prozesse, Automatisierung & Datenqualität im Engineering-Umfeld
     </p>
@@ -59,21 +63,23 @@
   <section class="grid" style="margin-top: 60px;">
     <article class="card">
       <h3 data-de="Prozess-Automatisierung" data-en="Process Automation">Prozess-Automatisierung</h3>
-      <p data-de="Wiederkehrende Abläufe automatisieren und Reibungspunkte beseitigen" 
+      <p data-de="Wiederkehrende Abläufe automatisieren und Reibungspunkte beseitigen"
          data-en="Automate recurring workflows and eliminate friction points">
         Wiederkehrende Abläufe automatisieren und Reibungspunkte beseitigen
       </p>
     </article>
+
     <article class="card">
       <h3 data-de="Datenqualität" data-en="Data Quality">Datenqualität</h3>
-      <p data-de="Stammdaten pflegen, Plausibilitäten prüfen und Dubletten vermeiden" 
+      <p data-de="Stammdaten pflegen, Plausibilitäten prüfen und Dubletten vermeiden"
          data-en="Maintain master data, check plausibility and avoid duplicates">
         Stammdaten pflegen, Plausibilitäten prüfen und Dubletten vermeiden
       </p>
     </article>
+
     <article class="card">
       <h3 data-de="Engineering-Prozesse" data-en="Engineering Processes">Engineering-Prozesse</h3>
-      <p data-de="Tools und Workflows im ERP- und CAD-Umfeld verbessern" 
+      <p data-de="Tools und Workflows im ERP- und CAD-Umfeld verbessern"
          data-en="Improve tools and workflows in ERP and CAD environments">
         Tools und Workflows im ERP- und CAD-Umfeld verbessern
       </p>
@@ -85,24 +91,29 @@
 <footer class="footer">
   <div class="container footrow">
     <small>© <span id="y"></span> Carsten Weier</small>
-    
+
     <div class="footer-social">
-      <a href="https://www.linkedin.com/in/carsten-weier-a241001a2/" target="_blank" rel="noopener" class="footer-social-link" aria-label="LinkedIn">
-        <svg viewBox="0 0 24 24" fill="currentColor" class="footer-social-icon">
-          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM3.559 7.17h3.548v13.282H3.559zM5.335 2C4.043 2 3 3.043 3 4.335s1.043 2.335 2.335 2.335S7.67 5.627 7.67 4.335 6.627 2 5.335 2z"/>
+      <!-- LinkedIn (saubere Brand-SVG, ohne “komischen” Kachelpfad) -->
+      <a href="https://www.linkedin.com/in/carsten-weier-a241001a2/" target="_blank" rel="noopener"
+         class="footer-social-link" aria-label="LinkedIn">
+        <svg viewBox="0 0 448 512" class="footer-social-icon" aria-hidden="true">
+          <path d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"/>
         </svg>
       </a>
-      <a href="https://www.xing.com/profile/Carsten_Weier3/" target="_blank" rel="noopener" class="footer-social-link" aria-label="Xing">
-        <svg viewBox="0 0 24 24" fill="currentColor" class="footer-social-icon">
-          <path d="M18.188 0c-.517 0-.741.325-.927.66 0 0-7.455 13.224-7.702 13.657.015.024 4.919 9.023 4.919 9.023.17.308.436.66.967.66h3.454c.211 0 .375-.078.463-.22.089-.151.089-.346-.009-.536l-4.879-8.916c-.024-.035-.049-.089-.072-.14.023-.051.048-.105.072-.139l7.701-13.661c.098-.188.098-.386-.009-.534-.107-.151-.271-.232-.482-.232h-3.454zm-13.537 15.593c0 .21.078.376.232.482.15.107.346.107.535-.009l2.83-4.918.063.034-2.83 4.918c-.19.306-.232.436-.232.967v3.454c0 .211.081.375.232.482.151.108.346.108.536-.009l4.879-8.916c.035-.024.089-.049.14-.072.051.023.105.048.139.072l-7.701 13.661c-.188.098-.386.098-.534-.009-.151-.107-.232-.271-.232-.482V18.54c0-.531.36-.796.667-.967l4.918-2.83h.063l-4.918 2.83c-.306.17-.667.436-.667.967v3.454c0 .211.081.375.232.482z"/>
+
+      <!-- XING (saubere Brand-SVG) -->
+      <a href="https://www.xing.com/profile/Carsten_Weier3/" target="_blank" rel="noopener"
+         class="footer-social-link" aria-label="Xing">
+        <svg viewBox="0 0 384 512" class="footer-social-icon" aria-hidden="true">
+          <path d="M162.7 210c-1.8 3.3-25.2 44.4-70.1 123.5-4.9 8.3-10.8 12.5-17.7 12.5H9.8c-7.7 0-12.1-7.5-8.5-14.4l69-121.3c.2 0 .2-.1 0-.3l-44.6-77.3c-3.6-6.9.8-14.4 8.5-14.4h65.2c6.9 0 13 4.2 17.7 12.5l45.6 79.2c.1.1.1.2 0 .3zm211.1-178H309c-6.9 0-13 4.2-17.7 12.5 0 0-158.6 279.7-163.9 289.1-.2.3-.2.7 0 1 5.3 9.5 103.5 178.9 103.5 178.9 4.7 8.3 10.8 12.5 17.7 12.5h64.8c7.7 0 12.1-7.5 8.5-14.4l-102.1-176c-.2-.4-.2-.9 0-1.3L382.3 46.4c3.6-6.9-.9-14.4-8.5-14.4z"/>
         </svg>
       </a>
     </div>
-    
+
     <small>
       <a href="/impressum/">
         <span data-de="Impressum" data-en="Legal Notice">Impressum</span>
-      </a> · 
+      </a> ·
       <a href="/datenschutz/">
         <span data-de="Datenschutz" data-en="Privacy">Datenschutz</span>
       </a>
