--- a/index.html
+++ b/index.html
@@ -92,23 +92,21 @@
   <div class="container footrow">
     <small>© <span id="y"></span> Carsten Weier</small>
 
-    <div class="footer-social">
-      <!-- LinkedIn (saubere Brand-SVG, ohne “komischen” Kachelpfad) -->
-      <a href="https://www.linkedin.com/in/carsten-weier-a241001a2/" target="_blank" rel="noopener"
-         class="footer-social-link" aria-label="LinkedIn">
-        <svg viewBox="0 0 448 512" class="footer-social-icon" aria-hidden="true">
-          <path d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"/>
-        </svg>
-      </a>
+<div class="footer-social">
+  <a href="https://www.linkedin.com/in/carsten-weier-a241001a2/" target="_blank" rel="noopener"
+     class="footer-social-link" aria-label="LinkedIn">
+    <svg viewBox="0 0 24 24" fill="currentColor" class="footer-social-icon">
+      <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+    </svg>
+  </a>
 
-      <!-- XING (saubere Brand-SVG) -->
-      <a href="https://www.xing.com/profile/Carsten_Weier3/" target="_blank" rel="noopener"
-         class="footer-social-link" aria-label="Xing">
-        <svg viewBox="0 0 384 512" class="footer-social-icon" aria-hidden="true">
-          <path d="M162.7 210c-1.8 3.3-25.2 44.4-70.1 123.5-4.9 8.3-10.8 12.5-17.7 12.5H9.8c-7.7 0-12.1-7.5-8.5-14.4l69-121.3c.2 0 .2-.1 0-.3l-44.6-77.3c-3.6-6.9.8-14.4 8.5-14.4h65.2c6.9 0 13 4.2 17.7 12.5l45.6 79.2c.1.1.1.2 0 .3zm211.1-178H309c-6.9 0-13 4.2-17.7 12.5 0 0-158.6 279.7-163.9 289.1-.2.3-.2.7 0 1 5.3 9.5 103.5 178.9 103.5 178.9 4.7 8.3 10.8 12.5 17.7 12.5h64.8c7.7 0 12.1-7.5 8.5-14.4l-102.1-176c-.2-.4-.2-.9 0-1.3L382.3 46.4c3.6-6.9-.9-14.4-8.5-14.4z"/>
-        </svg>
-      </a>
-    </div>
+  <a href="https://www.xing.com/profile/Carsten_Weier3/" target="_blank" rel="noopener"
+     class="footer-social-link" aria-label="Xing">
+    <svg viewBox="0 0 24 24" fill="currentColor" class="footer-social-icon">
+      <path d="M18.188 0c-.517 0-.741.325-.927.66 0 0-7.455 13.224-7.702 13.657.015.024 4.919 9.023 4.919 9.023.17.308.436.66.967.66h3.454c.211 0 .375-.078.463-.22.089-.151.089-.346-.009-.536l-4.879-8.916c-.004-.006-.004-.016 0-.022L22.139.756c.095-.191.097-.387.006-.535C22.056.078 21.894 0 21.686 0h-3.498zM3.648 4.74c-.211 0-.385.074-.473.216-.09.149-.078.339.02.531l2.34 4.05c.004.01.004.016 0 .021L1.86 16.051c-.099.188-.093 .381 0 .529.085.142.239.234.45.234h3.461c.518 0 .766-.348.945-.667l3.734-6.609-2.378-4.155c-.172-.315-.434-.659-.962-.659H3.648v.016z"/>
+    </svg>
+  </a>
+</div>
 
     <small>
       <a href="/impressum/">
